syntax = "proto3";

package health.v1;

message GetHealthRequest {}
message GetHealthResponse { bool is_up = 1; }

service HealthService {
  rpc GetHealth(GetHealthRequest) returns (GetHealthResponse) {};
}
